errors/examples/imposter.py
class Imposter:

    def __init__(self):
        self.doubt()

    def doubt(self):
        self.doubt()

me = Imposter()
